Добавл логаут, сваггер, политику валидации, изменил метод /me
