# src/internal/http/auth/auth.go
@@ -3,6 +3,8 @@ package auth
 import (
 	"encoding/json"
 	user_db "github.com/AlexeyBMSTU/shop_backend/src/db/user"
+	"github.com/AlexeyBMSTU/shop_backend/src/middleware/cookie"
+	"github.com/AlexeyBMSTU/shop_backend/src/middleware/verify_token"
 	"github.com/AlexeyBMSTU/shop_backend/src/models/User"
 	"github.com/AlexeyBMSTU/shop_backend/src/utils/errorGen"
 	"github.com/AlexeyBMSTU/shop_backend/src/utils/tokenGen"
@@ -11,21 +13,7 @@ import (
 	"golang.org/x/crypto/bcrypt"
 	"log"
 	"net/http"
-	"time"
 )
-
-func setCookie(w http.ResponseWriter, token string) {
-	expiration := time.Now().Add(24 * time.Hour)
-	cookie := http.Cookie{
-		Name:     "X-Access-Token",
-		Value:    token,
-		Path:     "/",
-		Expires:  expiration,
-		HttpOnly: true,
-		Secure:   false, // 'http': false, 'https': true
-	}
-	http.SetCookie(w, &cookie)
-}
 
 func LoginHandler(w http.ResponseWriter, r *http.Request) {
 	var user User.User
@@ -48,16 +36,18 @@ func LoginHandler(w http.ResponseWriter, r *http.Request) {
 		errorGen.ErrorGen(&w, "user not found", http.StatusBadRequest)
 		return
 	}
-
+	log.Printf("login 2 attempt for user: %s\n", user.Name)
 	if err := bcrypt.CompareHashAndPassword([]byte(dbUser.Password), []byte(user.Password)); err != nil {
 		log.Println("invalid password for user:", user.Name)
-		errorGen.ErrorGen(&w, "invalid password", http.StatusUnauthorized)
+		errorGen.ErrorGen(&w, "user not found", http.StatusUnauthorized)
 		return
 	}
 
-	if user.Email != nil && user.Email != dbUser.Email {
-		errorGen.ErrorGen(&w, "invalid email", http.StatusUnauthorized)
-		return
+	if user.Email != nil {
+		if dbUser.Email == nil || *user.Email != *dbUser.Email {
+			errorGen.ErrorGen(&w, "user not found", http.StatusUnauthorized)
+			return
+		}
 	}
 
 	token, err := tokenGen.CreateToken(dbUser.Name)
@@ -67,7 +57,7 @@ func LoginHandler(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
-	setCookie(w, token)
+	cookie.SetCookie(w, token)
 	w.WriteHeader(http.StatusOK)
 	toDTO(&w, dbUser)
 
@@ -122,10 +112,73 @@ func RegisterHandler(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
-	setCookie(w, token)
+	cookie.SetCookie(w, token)
 	w.WriteHeader(http.StatusCreated)
 	toDTO(&w, user)
 
 	log.Printf("user  registered successfully: %s\n", user.Name)
+	return
+}
+
+func LogoutHandler(w http.ResponseWriter, r *http.Request) {
+	_, err := verify_token.VerifyToken(w, r)
+	if err != nil {
+		log.Println("error verifying token:", err)
+		errorGen.ErrorGen(&w, "invalid token", http.StatusUnauthorized)
+		return
+	}
+
+	cookieValue, _ := cookie.GetCookie(r)
+
+	username, _ := tokenGen.ExtractUsernameFromToken(cookieValue)
+
+	cookie.ClearCookie(w, cookieValue)
+
+	w.WriteHeader(http.StatusOK)
+
+	dbUser, err := user_db.GetUserByName(username)
+	if err != nil {
+		log.Println("error getting user by name:", err)
+		errorGen.ErrorGen(&w, "user not found", http.StatusBadRequest)
+		return
+	}
+
+	toDTO(&w, dbUser)
+	log.Printf("user logged out: %s\n", dbUser.Name)
+	return
+}
+
+func MeHandler(w http.ResponseWriter, r *http.Request) {
+	_, err := verify_token.VerifyToken(w, r)
+	if err != nil {
+		log.Println("error verifying token:", err)
+		errorGen.ErrorGen(&w, "invalid token", http.StatusUnauthorized)
+		return
+	}
+	cookieValue, _ := r.Cookie("X-Access-Token")
+
+	token := cookieValue.Value
+
+	username, err := tokenGen.ExtractUsernameFromToken(token)
+	if err != nil {
+		log.Println("error extracting username:", err)
+		errorGen.ErrorGen(&w, "invalid token", http.StatusUnauthorized)
+		return
+	}
+	dbUser, err := user_db.GetUserByName(username)
+	if err != nil {
+		log.Println("error getting user:", err)
+		errorGen.ErrorGen(&w, "user not found", http.StatusUnauthorized)
+		return
+	}
+
+	log.Printf("protected user: %s\n", username)
+
+	w.WriteHeader(http.StatusOK)
+
+	toDTO(&w, dbUser)
+
+	log.Printf("user protected successfully: %s\n", username)
+
 	return
 }
